--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Logs
+﻿# Logs
 logs
 *.log
 npm-debug.log*
@@ -16,6 +16,8 @@ coverage
 
 # nyc test coverage
 .nyc_output
+电商项目.md
+README.md
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
